--- a/style.css
+++ b/style.css
@@ -236,3 +236,25 @@ button:hover {
   font-size: 24px;
   cursor: pointer;
 }
+
+.hidden {
+  display: none;
+}
+
+.face-scan {
+  margin: 15px 0;
+  text-align: center;
+}
+
+.face-box {
+  width: 120px;
+  height: 120px;
+  margin: 10px auto;
+  border: 3px dashed #0077cc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  border-radius: 50%;
+  color: #0077cc;
+}
